<resources>
    <string name="app_name">aidar_badirov_hw_5-2</string>
    <string name="fname">First Name</string>
    <string name="sname">Second Name</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="love_calc">Love Calculator</string>
    <string name="calc">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="procent">0%</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_funs_and_many_more">It`s funs and many more</string>
    <string name="get_started">Get Started</string>
    <string name="love_history">Love History</string>
    <string name="back">Back</string>
</resources>