<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.love.ResultFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/bordered_background"
        android:padding="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_result_heart"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:src="@drawable/item_result_heart" />

            <TextView
                android:id="@+id/tv_you_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/you"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_pink_heart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/item_pink_heart" />

            <TextView
                android:id="@+id/tv_me_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/me"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
                android:textColor="@color/pink"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/item_pink_white_heart" />

                <TextView
                    android:id="@+id/tv_procent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/procent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:backgroundTint="@color/blue_isn"
                android:text="@string/try_again"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/history_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="320dp"
                android:src="@drawable/item_history" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>